1~4clear, 5nonclear, 2는 alert뜸, 나머지는 안뜸