@@ -11,26 +11,57 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class User2Service {
+
     private final User2Repository user2Repository;
 
-    public void insertUser2(User2DTO user2DTO){
-        User2 user2 = user2DTO.toEntity();
-        user2Repository.save(user2);
-    };
+    public ResponseEntity<?> insertUser2(User2DTO user2DTO){
+        /*
+            JPA save()는 삽입, 수정을 동시에 할 수 있는 메서드 이기 때문에
+            삽입을 수행하고자 할 경우에는 먼저 미리 existsById()로 존재여부를 확인하고
+            save()를 수행하면 됨
+        */
+        if(user2Repository.existsById(user2DTO.getUid())){
+            // 이미 존재하는 아이디이면
+            return ResponseEntity
+                    .status(HttpStatus.CONFLICT)
+                    .body(user2DTO.getUid() + " already exist");
 
-    public User2DTO selectUser2(String uid){
-        User2 user2 = user2Repository.findById(uid).get();
-        return user2.toDTO();
-    };
+        }else{
+            // 존재하지 않으면
+            User2 user2 = user2DTO.toEntity();
+            user2Repository.save(user2);
 
-    public List<User2DTO> selsectUser2s(){
-        return user2Repository.findAll()
+            return ResponseEntity
+                    .status(HttpStatus.OK)
+                    .body(user2DTO);
+        }
+    }
+
+    public ResponseEntity<?> selectUser2(String uid){
+
+        try {
+            // orElseThrow() 메서드로 존재하는 Entity를 가져오거나 존재하지 않으면 기본 예외 NoSuchElementException 발생
+            User2 user2 = user2Repository.findById(uid).orElseThrow();
+
+            return ResponseEntity
+                    .status(HttpStatus.OK)
+                    .body(user2.toDTO());
+
+        }catch (Exception e){
+            return ResponseEntity
+                    .status(HttpStatus.NOT_FOUND)
+                    .body("user not found");
+        }
+    }
+
+    public ResponseEntity<List<User2DTO>> selectUser2s(){
+
+        List<User2DTO> user2DTOs = user2Repository.findAll()
                 .stream()
                 .map(entity -> User2DTO.builder()
                         .uid(entity.getUid())
@@ -38,22 +69,32 @@ public class User2Service {
                         .birth(entity.getBirth())
                         .addr(entity.getAddr())
                         .build())
-                .collect(Collectors.toList());
-    };
+                .toList();
 
-    public User2DTO updateUser2(User2DTO user2DTO){
+        return ResponseEntity
+                .ok()
+                .body(user2DTOs);
+    }
 
-        // 수정
-        user2Repository.save(user2DTO.toEntity());
+    public ResponseEntity<?> updateUser2(User2DTO user2DTO){
 
-        // 수정한 사용자 조회/반환
-        Optional<User2> result = user2Repository.findById(user2DTO.getUid());
-        return result.get().toDTO();
+        // 수정하기 전에 먼저 존재여부 확인
+        if(user2Repository.existsById(user2DTO.getUid())){
+            // 이미 존재하는 아이디이면 수정
+            user2Repository.save(user2DTO.toEntity());
 
-
-    };
-
-    public ResponseEntity deleteUser2(String uid){
+            // 수정 후 수정 데이터 반환
+            return ResponseEntity
+                    .status(HttpStatus.OK)
+                    .body(user2DTO);
+        }else{
+            // 사용자가 존재하지 않으면 NOT_FOUND 응답데이터와 user not found 메세지
+            return ResponseEntity
+                    .status(HttpStatus.NOT_FOUND)
+                    .body("user not found");
+        }
+    }
+    public ResponseEntity<?> deleteUser2(String uid){
 
         // 삭제 전 삭제할 사용자 조회
         Optional<User2> optUser2 = user2Repository.findById(uid);
@@ -70,5 +111,7 @@ public class User2Service {
                     .status(HttpStatus.NOT_FOUND)
                     .body("user not found");
         }
+
     }
+
 }
